@@ -1,3 +1,7 @@
+2006-08-16 Harri Pitkänen  <hatapitk@iki.fi>
+
+	* Three new character replacement suggestions.
+
 2006-08-14 Harri Pitkänen  <hatapitk@iki.fi>
 
 	* Accept some alternative Unicode sequences for certain characters.
